Add more unit tests and other testing improvements.
- Add unit tests for NoteRequestResponse, NoteRequestResponseJSON, and
NoteRequestWithRetry.
- Simplify and condense some of the logic in existing tests.
- Separate test executables into tests/src and headers into tests/include.
- Add -Wall -Wextra -Werror -Wpedantic to compiler flags.
- Add some development documentation to tests/README.md, to give new developers
a tutorial on adding new tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,8 @@ option(BUILD_TESTS "Build tests." ON)
 option(BUILD_SHARED_LIBS "Build note-c as a shared library." ON)
 option(COVERAGE "Compile for test coverage reporting." OFF)
 
+add_compile_options(-Wall -Wextra -Werror -Wpedantic)
+
 set(NOTE_C_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 add_library(
     note_c
@@ -54,7 +56,8 @@ if(BUILD_TESTS)
         MOCKED_FNS
         "NoteReset;
          NoteJSONTransaction;
-         NoteTransaction"
+         NoteTransaction;
+         NoteGetMs"
     )
     foreach(MOCKED_FN ${MOCKED_FNS})
         string(APPEND OBJCOPY_WEAKEN "-W ${MOCKED_FN} ")
