--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,3 +14,12 @@ jobs:
         uses: actions/checkout@v3
       - name: Run unit tests
         uses: ./.github/actions/run_unit_tests
+  run_astyle:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+      - name: Install astyle
+        run: sudo apt-get install -y astyle
+      - name: Check formatting
+        run: ./scripts/run_astyle.sh --check
