--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -79,6 +79,7 @@ if(COVERAGE)
     add_custom_command(
         TARGET coverage POST_BUILD
         COMMAND lcov --capture --no-external --directory ${NOTE_C_SRC_DIR} --output-file lcov.info --rc lcov_branch_coverage=1
+        COMMAND lcov --summary lcov.info
         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/coverage
     )
     # The tests have to be built before we can generate the coverage report.
