--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -58,6 +58,7 @@ add_test(NoteRequest_test)
 add_test(NoteRequestResponse_test)
 add_test(NoteRequestResponseJSON_test)
 add_test(NoteRequestWithRetry_test)
+add_test(NoteGetEnv_test)
 
 if(COVERAGE)
     find_program(LCOV lcov REQUIRED)
