--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -59,6 +59,7 @@ add_test(NoteRequestResponse_test)
 add_test(NoteRequestResponseJSON_test)
 add_test(NoteRequestWithRetry_test)
 add_test(NoteGetEnv_test)
+add_test(NotePayload_test)
 
 if(COVERAGE)
     find_program(LCOV lcov REQUIRED)
