Add i2cNoteTransaction unit tests.
Also, update the copyright year from 2022 to 2023 in the test source files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,7 +68,11 @@ if(BUILD_TESTS)
          NoteTransaction;
          NoteGetMs;
          NoteRequestResponse;
-         NoteMalloc"
+         NoteMalloc;
+         NoteI2CTransmit;
+         NoteI2CReceive;
+         NoteLockI2C;
+         NoteUnlockI2C"
     )
     foreach(MOCKED_FN ${MOCKED_FNS})
         string(APPEND OBJCOPY_WEAKEN "-W ${MOCKED_FN} ")
