Add NoteI2CReset unit tests.
Also, separate out common i2c mocking code into i2c_mocks.h for use in both
i2cNoteTransaction_test.cpp and i2cNoteReset_test.cpp.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,7 +72,8 @@ if(BUILD_TESTS)
          NoteI2CTransmit;
          NoteI2CReceive;
          NoteLockI2C;
-         NoteUnlockI2C"
+         NoteUnlockI2C;
+         NoteI2CReset"
     )
     foreach(MOCKED_FN ${MOCKED_FNS})
         string(APPEND OBJCOPY_WEAKEN "-W ${MOCKED_FN} ")
