--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -61,6 +61,7 @@ add_test(NoteRequestWithRetry_test)
 add_test(NoteGetEnv_test)
 add_test(NotePayload_test)
 add_test(i2cNoteTransaction_test)
+add_test(i2cNoteReset_test)
 
 if(COVERAGE)
     find_program(LCOV lcov REQUIRED)
