--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,4 +22,4 @@ jobs:
       - name: Install astyle
         run: sudo apt-get install -y astyle
       - name: Check formatting
-        run: ./scripts/run_astyle.sh --check
+        run: ./scripts/run_astyle.sh
