--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -70,6 +70,20 @@ add_test(NoteTransactionHooks_test)
 add_test(NoteSerialHooks_test)
 add_test(NotePrint_test)
 add_test(NotePrintln_test)
+add_test(NoteTime_test)
+add_test(NoteRegion_test)
+add_test(NoteLocationValid_test)
+add_test(NoteIsConnected_test)
+add_test(NoteGetNetStatus_test)
+add_test(NoteGetVersion_test)
+add_test(NoteGetLocation_test)
+add_test(NoteSetLocation_test)
+add_test(NoteClearLocation_test)
+add_test(NoteGetLocationMode_test)
+add_test(NoteSetLocationMode_test)
+add_test(NoteGetServiceConfig_test)
+add_test(NoteGetStatus_test)
+add_test(NoteSleep_test)
 
 if(COVERAGE)
     find_program(LCOV lcov REQUIRED)
