--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,15 @@ jobs:
         uses: actions/checkout@v3
       - name: Run unit tests
         uses: ./.github/actions/run_unit_tests
+      - name: Coveralls Action Bug Workaround
+        id: coveralls_bug_workaround
+        run: sudo sed -i 's/github\/workspace/home\/runner\/work\/note-c\/note-c/g' ./build/test/coverage/lcov.info
+      - name: Publish Test Coverage
+        id: publish_coverage
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          path-to-lcov: ./build/test/coverage/lcov.info
   run_astyle:
     runs-on: ubuntu-latest
     steps:
