Make more testing improvements.
Add unit testing for

- NoteErrorClean
- NoteNewCommand
- NoteNewRequest

Improve coverage in

- NoteTransaction_test.cpp
- serialNoteTransaction_test.cpp

Resolve another memory leak in NoteGetEnv_test.cpp.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,7 +91,10 @@ if(BUILD_TESTS)
          NoteDebug;
          NotePrint;
          NoteNewCommand;
-         NoteRequest"
+         NoteRequest;
+         JCreateObject;
+         NoteTransactionStart;
+         NoteUserAgent"
     )
     foreach(MOCKED_FN ${MOCKED_FNS})
         string(APPEND OBJCOPY_WEAKEN "-W ${MOCKED_FN} ")
