--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -84,6 +84,9 @@ add_test(NoteSetLocationMode_test)
 add_test(NoteGetServiceConfig_test)
 add_test(NoteGetStatus_test)
 add_test(NoteSleep_test)
+add_test(NoteNewRequest_test)
+add_test(NoteNewCommand_test)
+add_test(NoteErrorClean_test)
 
 if(COVERAGE)
     find_program(LCOV lcov REQUIRED)
