Add valgrind to Docker image that runs unit tests.

--- a/.github/actions/run_unit_tests/Dockerfile
+++ b/.github/actions/run_unit_tests/Dockerfile
@@ -17,6 +17,7 @@ RUN ["dash", "-c", "\
      ca-certificates \
      curl \
      lcov \
+     valgrind \
  && apt-get clean \
  && apt-get purge \
  && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
