Add optional memory checking with valgrind. (#45)

--- a/.github/actions/run_unit_tests/Dockerfile
+++ b/.github/actions/run_unit_tests/Dockerfile
@@ -17,6 +17,7 @@ RUN ["dash", "-c", "\
      ca-certificates \
      curl \
      lcov \
+     valgrind \
  && apt-get clean \
  && apt-get purge \
  && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
@@ -40,4 +41,4 @@ RUN ["dash", "-c", "\
  && rm -rf Catch2-3.2.1  v3.2.1.tar.gz \
 "]
 
-ENTRYPOINT ["./scripts/run_unit_tests.sh", "--coverage"]
+ENTRYPOINT ["./scripts/run_unit_tests.sh", "--coverage", "--mem-check"]
