--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -87,6 +87,9 @@ add_test(NoteSleep_test)
 add_test(NoteNewRequest_test)
 add_test(NoteNewCommand_test)
 add_test(NoteErrorClean_test)
+add_test(NoteSetFnMutex_test)
+add_test(NoteSetFnSerial_test)
+add_test(NoteSetFnI2C_test)
 
 if(COVERAGE)
     find_program(LCOV lcov REQUIRED)
