--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -90,6 +90,27 @@ add_test(NoteErrorClean_test)
 add_test(NoteSetFnMutex_test)
 add_test(NoteSetFnSerial_test)
 add_test(NoteSetFnI2C_test)
+add_test(JIsPresent_test)
+add_test(JGetString_test)
+add_test(JGetObject_test)
+add_test(JBoolValue_test)
+add_test(JStringValue_test)
+add_test(JNumberValue_test)
+add_test(JGetNumber_test)
+add_test(JIntValue_test)
+add_test(JGetInt_test)
+add_test(JGetBool_test)
+add_test(JIsNullString_test)
+add_test(JIsExactString_test)
+add_test(JContainsString_test)
+add_test(JAddBinaryToObject_test)
+add_test(JGetBinaryFromObject_test)
+add_test(JItoA_test)
+add_test(JAtoI_test)
+add_test(JGetItemName_test)
+add_test(JAllocString_test)
+add_test(JType_test)
+add_test(JGetType_test)
 
 if(COVERAGE)
     find_program(LCOV lcov REQUIRED)
