--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -115,6 +115,12 @@ add_test(JType_test)
 add_test(JGetType_test)
 add_test(NotePrintf_test)
 add_test(NoteDebugf_test)
+add_test(NoteSetEnvDefault_test)
+add_test(NoteSetEnvDefaultNumber_test)
+add_test(NoteGetEnvNumber_test)
+add_test(NotePayloadSaveAndSleep_test)
+add_test(NoteWake_test)
+add_test(NotePayloadRetrieveAfterSleep_test)
 
 if(COVERAGE)
     find_program(LCOV lcov REQUIRED)
