Add more unit tests.
- NoteFactoryReset
- NoteSetProductID
- NoteSetSerialNumber
- NoteSetSyncMode
- NoteSetUploadMode
- NoteTemplate

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -122,6 +122,12 @@ add_test(NotePayloadSaveAndSleep_test)
 add_test(NoteWake_test)
 add_test(NotePayloadRetrieveAfterSleep_test)
 add_test(NoteUserAgent_test)
+add_test(NoteFactoryReset_test)
+add_test(NoteSetProductID_test)
+add_test(NoteSetSerialNumber_test)
+add_test(NoteSetUploadMode_test)
+add_test(NoteSetSyncMode_test)
+add_test(NoteTemplate_test)
 
 if(COVERAGE)
     find_program(LCOV lcov REQUIRED)
