--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -128,6 +128,15 @@ add_test(NoteSetSerialNumber_test)
 add_test(NoteSetUploadMode_test)
 add_test(NoteSetSyncMode_test)
 add_test(NoteTemplate_test)
+add_test(NoteTimeSet_test)
+add_test(NoteLocalTimeST_test)
+add_test(NoteAdd_test)
+add_test(NoteSendToRoute_test)
+add_test(NoteGetVoltage_test)
+add_test(NoteGetTemperature_test)
+add_test(NoteGetContact_test)
+add_test(NoteSetContact_test)
+add_test(NoteDebugSyncStatus_test)
 
 if(COVERAGE)
     find_program(LCOV lcov REQUIRED)
