feat: New I2C Lock and Note Lock APIs
- Add new APIs by breaking out functionality of existing Lock API
- Add unit-test for each new API
- Add Dev Container Environment
- Add VSCode tasks to incorporate scripts folder

--- a/.github/actions/run_unit_tests/Dockerfile
+++ b/.github/actions/run_unit_tests/Dockerfile
@@ -13,10 +13,16 @@ FROM debian:stable-slim
 RUN ["dash", "-c", "\
     apt-get update --quiet \
  && apt-get install --assume-yes --no-install-recommends --quiet \
-     build-essential \
+     astyle \
      ca-certificates \
      curl \
+     g++ \
+     gcc \
+     gdb \
+     git \
      lcov \
+     make \
+     nano \
      valgrind \
  && apt-get clean \
  && apt-get purge \
