--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -87,6 +87,8 @@ add_test(NoteNewRequest_test)
 add_test(NoteNewCommand_test)
 add_test(NoteErrorClean_test)
 add_test(NoteSetFnMutex_test)
+add_test(NoteSetFnI2CMutex_test)
+add_test(NoteSetFnNoteMutex_test)
 add_test(NoteSetFnSerial_test)
 add_test(NoteSetFnI2C_test)
 add_test(JIsPresent_test)
