--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,7 +66,11 @@ if(BUILD_TESTS)
 
     target_compile_definitions(
         note_c
-        PUBLIC TEST
+        PUBLIC NOTE_C_TEST
+    )
+    target_include_directories(
+        note_c
+        PRIVATE ${CMAKE_CURRENT_LIST_DIR}/test/include
     )
 
     # If we don't weaken the functions we're mocking in the tests, the linker
