--- a/.github/actions/run_unit_tests/Dockerfile
+++ b/.github/actions/run_unit_tests/Dockerfile
@@ -1,4 +1,4 @@
 ARG BASE_IMAGE
 FROM ${BASE_IMAGE}
 
-ENTRYPOINT ["./scripts/run_unit_tests.sh", "--coverage", "--mem-check"]
+ENTRYPOINT ["./scripts/run_unit_tests.sh", "--coverage"]
