feat: JGetArray Tests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -93,6 +93,7 @@ add_test(NoteSetFnSerial_test)
 add_test(NoteSetFnI2C_test)
 add_test(JIsPresent_test)
 add_test(JGetString_test)
+add_test(JGetArray_test)
 add_test(JGetObject_test)
 add_test(JBoolValue_test)
 add_test(JStringValue_test)
