fix: Unit-tests
- Improve error logging on failure
- Change call count to greater than 1 (ensure invocation not count)

--- a/.github/actions/run_unit_tests/Dockerfile
+++ b/.github/actions/run_unit_tests/Dockerfile
@@ -12,7 +12,7 @@ ARG UID=1000
 ARG USER="blues"
 
 # POSIX compatible (Linux/Unix) base image.
-FROM debian:stable-slim
+FROM --platform=linux/amd64 debian:stable-slim
 
 # Import Global Argument(s)
 ARG DEBIAN_FRONTEND
