Make some changes/fixes to CRC code for NoteTransaction.
- Simplify code to get rid of need for lastRequestCrcAdded.
- Fail NoteTransaction if CRC needed to be added and it wasn't.
- Make sure that if there was a CRC or I/O error even after retrying that
NoteTransaction returns an error.
- Add a unit test for crcAdd.
- Add a unit test for crcError.
- Add additional tests to NoteTransaction_test.cpp for CRC and I/O error cases.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -137,6 +137,8 @@ add_test(NoteGetTemperature_test)
 add_test(NoteGetContact_test)
 add_test(NoteSetContact_test)
 add_test(NoteDebugSyncStatus_test)
+add_test(crcAdd_test)
+add_test(crcError_test)
 
 if(NOTE_C_COVERAGE)
     find_program(LCOV lcov REQUIRED)
