--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -137,6 +137,8 @@ add_test(NoteGetTemperature_test)
 add_test(NoteGetContact_test)
 add_test(NoteSetContact_test)
 add_test(NoteDebugSyncStatus_test)
+add_test(crcAdd_test)
+add_test(crcError_test)
 
 if(NOTE_C_COVERAGE)
     find_program(LCOV lcov REQUIRED)
@@ -151,7 +153,7 @@ if(NOTE_C_COVERAGE)
         COMMAND mkdir -p coverage
         # Zero out the coverage counters from any previous runs.
         COMMAND lcov --zerocounters --directory ${NOTE_C_SRC_DIR}
-        COMMAND ${CMAKE_CTEST_COMMAND}
+        COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure
         WORKING_DIRECTORY ${CMAKE_CURENT_BINARY_DIR}
     )
     # These files are third party code that we aren't interested in testing
