Add unit tests.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -139,6 +139,15 @@ add_test(NoteSetContact_test)
 add_test(NoteDebugSyncStatus_test)
 add_test(crcAdd_test)
 add_test(crcError_test)
+add_test(serialChunkedReceive_test)
+add_test(serialChunkedTransmit_test)
+add_test(i2cNoteQueryLength_test)
+add_test(i2cChunkedReceive_test)
+add_test(i2cChunkedTransmit_test)
+add_test(NoteBinaryReceive_test)
+add_test(NoteBinaryTransmit_test)
+add_test(NoteBinaryRequiredRxBuffer_test)
+add_test(NoteBinaryReset_test)
 
 if(NOTE_C_COVERAGE)
     find_program(LCOV lcov REQUIRED)
