--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -144,6 +144,7 @@ add_test(serialChunkedTransmit_test)
 add_test(i2cNoteQueryLength_test)
 add_test(i2cChunkedReceive_test)
 add_test(i2cChunkedTransmit_test)
+add_test(NoteBinaryDataLength_test)
 add_test(NoteBinaryReceive_test)
 add_test(NoteBinaryTransmit_test)
 add_test(NoteBinaryRequiredRxMaxBuffer_test)
