chore: improve unit-test coverage

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -145,10 +145,14 @@ add_test(i2cNoteQueryLength_test)
 add_test(i2cChunkedReceive_test)
 add_test(i2cChunkedTransmit_test)
 add_test(NoteBinaryDataDecodedLength_test)
-add_test(NoteBinaryReceive_test)
-add_test(NoteBinaryTransmit_test)
 add_test(NoteBinaryDataEncodedLength_test)
+add_test(NoteBinaryDecode_test)
+add_test(NoteBinaryEncode_test)
+add_test(NoteBinaryMaxEncodedLengthForDecodedLength_test)
+add_test(NoteBinaryMaxDecodedLengthForBufferSize_test)
+add_test(NoteBinaryReceive_test)
 add_test(NoteBinaryReset_test)
+add_test(NoteBinaryTransmit_test)
 
 if(NOTE_C_COVERAGE)
     find_program(LCOV lcov REQUIRED)
