chore: support binary chunked receive (#93)

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -144,10 +144,15 @@ add_test(serialChunkedTransmit_test)
 add_test(i2cNoteQueryLength_test)
 add_test(i2cChunkedReceive_test)
 add_test(i2cChunkedTransmit_test)
+add_test(NoteBinaryDataDecodedLength_test)
+add_test(NoteBinaryDataEncodedLength_test)
+add_test(NoteBinaryDataReset_test)
+add_test(NoteBinaryDecode_test)
+add_test(NoteBinaryEncode_test)
+add_test(NoteBinaryMaxEncodedLength_test)
+add_test(NoteBinaryMaxDecodedLength_test)
 add_test(NoteBinaryReceive_test)
 add_test(NoteBinaryTransmit_test)
-add_test(NoteBinaryRequiredRxBuffer_test)
-add_test(NoteBinaryReset_test)
 
 if(NOTE_C_COVERAGE)
     find_program(LCOV lcov REQUIRED)
