--- a/.github/workflows/hitl/notecard-binary-tests.yml
+++ b/.github/workflows/hitl/notecard-binary-tests.yml
@@ -9,12 +9,11 @@ on:
     - cron:  '45 4 * * 1'  # 4.45am every Monday
 
 jobs:
-  md5srv-test:
-    using: ./.github/workflows/md5srv-tests.yml
-    # runs-on: local # required for `act`
+  # md5srv-test:
+  #   uses: ./.github/workflows/hitl/md5srv-tests.yml
 
   notecard-binary-test:
-    needs: md5srv-test
+    # needs: md5srv-test
     runs-on: [self-hosted, swan, notecard, stlink, notecard-serial, md5srv, notehub-client]
     defaults:
       run:
