--- a/.github/workflows/notecard-binary-tests.yml
+++ b/.github/workflows/notecard-binary-tests.yml
@@ -188,7 +188,7 @@ jobs:
                 -H "Authorization: Bearer $NOTEHUB_ACCESS_TOKEN")
 
       - name: Run Tests
-        working_directory: $PIO_PROJECT_DIR
+        working-directory: $PIO_PROJECT_DIR
         run: |
           platformio test -v -e debug \
              --without-building --without-uploading \
@@ -199,7 +199,9 @@ jobs:
 
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v3
-        if: secrets.GITHUB_TOKEN && (success() || failure()) # always run even if the previous step fails
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        if: env.GITHUB_TOKEN && (success() || failure()) # always run even if the previous step fails
         with:
           report_paths: '**/test/hitl/card.binary/test*.xml'
           check_name: Notecard Binary HIL Tests
